--- a/weitaixin/src/main/AndroidManifest.xml
+++ b/weitaixin/src/main/AndroidManifest.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="cn.ihealthbaby.weitaixin">
+<manifest
+    package="cn.ihealthbaby.weitaixin"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -31,7 +33,7 @@
         android:largeScreens="true"
         android:normalScreens="true"
         android:resizeable="true"
-        android:smallScreens="true" />
+        android:smallScreens="true"/>
 
     <application
         android:name=".WeiTaiXinApplication"
@@ -42,14 +44,19 @@
         android:screenOrientation="portrait"
         android:theme="@android:style/Theme.Light.NoTitleBar"
         tools:replace="android:icon">
+
+        <meta-data
+            android:name="BUG_HD_SDK_GENERAL_KEY"
+            android:value="c2d6e4ecdfb00958ea88a5de34753193"/>
+
         <activity
             android:name=".ui.WelcomeActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
             <intent-filter>
@@ -59,61 +66,61 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".ui.login.RegistActivity" />
+            android:name=".ui.login.RegistActivity"
+            android:screenOrientation="portrait"/>
         <activity
-            android:screenOrientation="portrait"
             android:name=".ui.MeMainFragmentActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".ui.login.LoginActivity" />
+            android:name=".ui.login.LoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".ui.mine.SetSystemActivity" />
-        <activity android:name=".ui.mine.WoInformationActivity" />
-        <activity android:name=".ui.login.InfoEditActivity" />
-        <activity android:name=".ui.mine.GradedActivity" />
-        <activity android:name=".ui.mine.WoGoldenActivity" />
-        <activity android:name=".ui.mine.WoMessageActivity" />
-        <activity android:name=".ui.record.AskDoctorActivity" />
-        <activity android:name=".ui.mine.SetSystemSuggestionActivity" />
-        <activity android:name=".ui.mine.SetSystemResetPasswordActivity" />
-        <activity android:name=".ui.mine.SetSystemGuardianActivity" />
-        <activity android:name=".ui.mine.SetSystemUploadActivity" />
-        <activity android:name=".ui.login.LoginSmsAuthCodeActivity" />
-        <activity android:name=".ui.monitor.GuardianStateActivity" />
-        <activity android:name=".ui.mine.WoMessagOfSystemMessageActivity" />
-        <activity android:name=".ui.mine.WoMessagOfReplyMessageActivity" />
-        <activity android:name=".ui.login.ProtocolActivity" />
-        <activity android:name=".ui.record.ReplyedActivity" />
-        <activity android:name=".ui.mine.WaitReplyingActivity" />
+            android:name=".ui.mine.SetSystemActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.mine.WoInformationActivity"/>
+        <activity android:name=".ui.login.InfoEditActivity"/>
+        <activity android:name=".ui.mine.GradedActivity"/>
+        <activity android:name=".ui.mine.WoGoldenActivity"/>
+        <activity android:name=".ui.mine.WoMessageActivity"/>
+        <activity android:name=".ui.record.AskDoctorActivity"/>
+        <activity android:name=".ui.mine.SetSystemSuggestionActivity"/>
+        <activity android:name=".ui.mine.SetSystemResetPasswordActivity"/>
+        <activity android:name=".ui.mine.SetSystemGuardianActivity"/>
+        <activity android:name=".ui.mine.SetSystemUploadActivity"/>
+        <activity android:name=".ui.login.LoginSmsAuthCodeActivity"/>
+        <activity android:name=".ui.monitor.GuardianStateActivity"/>
+        <activity android:name=".ui.mine.WoMessagOfSystemMessageActivity"/>
+        <activity android:name=".ui.mine.WoMessagOfReplyMessageActivity"/>
+        <activity android:name=".ui.login.ProtocolActivity"/>
+        <activity android:name=".ui.record.ReplyedActivity"/>
+        <activity android:name=".ui.mine.WaitReplyingActivity"/>
         <activity
             android:name=".ui.monitor.MonitorActivity"
-            android:label="@string/title_activity_monitor" />
+            android:label="@string/title_activity_monitor"/>
         <activity
             android:name=".ui.monitor.MonitorDetialActivity"
-            android:label="@string/title_activity_curve_detial" />
-        <activity android:name=".ui.mine.AboutActivity" />
-        <activity android:name=".ui.mine.Welcome2Activity" />
-        <activity android:name=".ui.mine.FeatureActiviy" />
-        <activity android:name=".ui.mine.UseProcessActiviy" />
-        <activity android:name=".ui.mine.UseProtocolActiviy" />
+            android:label="@string/title_activity_curve_detial"/>
+        <activity android:name=".ui.mine.AboutActivity"/>
+        <activity android:name=".ui.mine.Welcome2Activity"/>
+        <activity android:name=".ui.mine.FeatureActiviy"/>
+        <activity android:name=".ui.mine.UseProcessActiviy"/>
+        <activity android:name=".ui.mine.UseProtocolActiviy"/>
 
-        <receiver android:name=".library.data.bluetooth.mode.spp.BluetoothReceiver" />
+        <receiver android:name=".library.data.bluetooth.mode.spp.BluetoothReceiver"/>
 
-        <activity android:name=".ui.record.CloudRecordPlayActivity" />
-        <activity android:name=".ui.pay.PayAccountActivity" />
-        <activity android:name=".ui.pay.PayMimeOrderActivity" />
-        <activity android:name=".ui.pay.PayMimeAddressActivity" />
-        <activity android:name=".ui.pay.PayMimeAddressWithEditActivity" />
-        <activity android:name=".ui.pay.PayAddAddressActivity" />
-        <activity android:name=".ui.pay.PayAddAddressWithEditActivity" />
-        <activity android:name=".ui.pay.PayRentInformationActivity" />
-        <activity android:name=".ui.pay.PayHospitalChooseActivity" />
-        <activity android:name=".ui.pay.PayRentChooseProvincesLeftActivity" />
-        <activity android:name=".ui.pay.PayOrderInformationActivity" />
-        <activity android:name=".ui.pay.PayConfirmOrderActivity" />
+        <activity android:name=".ui.record.CloudRecordPlayActivity"/>
+        <activity android:name=".ui.pay.PayAccountActivity"/>
+        <activity android:name=".ui.pay.PayMimeOrderActivity"/>
+        <activity android:name=".ui.pay.PayMimeAddressActivity"/>
+        <activity android:name=".ui.pay.PayMimeAddressWithEditActivity"/>
+        <activity android:name=".ui.pay.PayAddAddressActivity"/>
+        <activity android:name=".ui.pay.PayAddAddressWithEditActivity"/>
+        <activity android:name=".ui.pay.PayRentInformationActivity"/>
+        <activity android:name=".ui.pay.PayHospitalChooseActivity"/>
+        <activity android:name=".ui.pay.PayRentChooseProvincesLeftActivity"/>
+        <activity android:name=".ui.pay.PayOrderInformationActivity"/>
+        <activity android:name=".ui.pay.PayConfirmOrderActivity"/>
         <activity android:name=".ui.pay.PayAffirmPaymentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -121,13 +128,13 @@
                 <data android:scheme="wx8da8b08e973e9305"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.monitor.LocalRecordPlayActivity" />
-        <activity android:name=".ui.pay.PayOrderDetailsActivity" />
-        <activity android:name=".ui.pay.PayChooseAddressProvinceActivity" />
-        <activity android:name=".ui.pay.PayChooseAddressCityActivity" />
-        <activity android:name=".ui.pay.PayChooseAddressAreasActivity" />
-        <activity android:name=".ui.pay.PayRentChooseCityRightActivity" />
-        <activity android:name=".ui.monitor.MonitorCommonSense" />
+        <activity android:name=".ui.monitor.LocalRecordPlayActivity"/>
+        <activity android:name=".ui.pay.PayOrderDetailsActivity"/>
+        <activity android:name=".ui.pay.PayChooseAddressProvinceActivity"/>
+        <activity android:name=".ui.pay.PayChooseAddressCityActivity"/>
+        <activity android:name=".ui.pay.PayChooseAddressAreasActivity"/>
+        <activity android:name=".ui.pay.PayRentChooseCityRightActivity"/>
+        <activity android:name=".ui.monitor.MonitorCommonSense"/>
 
         <activity
             android:name="cn.ihealthbaby.weitaixin.wxapi.WXPayEntryActivity"
@@ -139,19 +146,19 @@
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
+            android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
 
         <receiver
             android:name=".net.sourceforge.simcpux.AppRegister">
             <intent-filter>
-                <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
+                <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP"/>
             </intent-filter>
         </receiver>
 
 
-        <service android:name=".service.AdviceSettingService" />
-        <service android:name=".DownloadService" />
+        <service android:name=".service.AdviceSettingService"/>
+        <service android:name=".DownloadService"/>
     </application>
 
 </manifest>
